# CPCluster

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.json  setup_container.sh
.github/workflows/: rust.yml
CPCluster_masterNode/: AGENTS.md  Cargo.toml  README.md
CPCluster_masterNode/config/: config.json
CPCluster_masterNode/src/: lib.rs  main.rs  shell.rs  state.rs  tls.rs
CPCluster_masterNode/tests/: integration.rs  state_tests.rs  tls.rs
CPCluster_node/: AGENTS.md  Cargo.toml  README.md
CPCluster_node/config/: config.json
CPCluster_node/src/: disk_store.rs  internet_ports.rs  lib.rs  main.rs  memory_store.rs  node.rs
CPCluster_node/tests/: integration.rs  reconnect.rs  tasks.rs  tls.rs
CPCluster_standbyMaster/: Cargo.toml
CPCluster_standbyMaster/src/: main.rs
cpcluster_client/: AGENTS.md  Cargo.toml  README.md
cpcluster_client/src/: lib.rs  main.rs
cpcluster_client/tests/: integration.rs
cpcluster_common/: AGENTS.md  Cargo.toml  README.md
cpcluster_common/src/: config.rs  execute.rs  lib.rs
cpcluster_protocol/: Cargo.toml
cpcluster_protocol/src/: lib.rs
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  PROJECT_OVERVIEW.md  ROADMAP.md
scripts/: install.sh
