[package]
name = "cpcluster_masternode"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
rustls = "0.20.9"
rustls-pemfile = "0.2.1"  # Fügen Sie diese Zeile hinzu
rcgen = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
cpcluster_common = { path = "../cpcluster_common" }
log = "0.4"
env_logger = "0.10"
