[package]
name = "cpcluster_node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tokio für asynchrone Operationen
tokio = { version = "1", features = ["full"] }

# Tokio Rustls für TLS-Verbindungen
tokio-rustls = "0.23"

# Rustls für TLS-Konfigurationen und Zertifikate
rustls = "0.20.9"

# Rustls-pemfile zum Einlesen von Zertifikaten und Schlüsseln im PEM-Format
rustls-pemfile = "0.2.1"

# Serde für Serialisierung/Deserialisierung
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID für eindeutige Aufgaben-IDs
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
meval = "0.2"
num-complex = "0.4"
cpcluster_common = { path = "../cpcluster_common" }
rustls-native-certs = "0.8"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"

[dev-dependencies]
rcgen = "0.9"
tempfile = "3"
